--- a/src/app/Components2/PrintPackButton.css
+++ b/src/app/Components2/PrintPackButton.css
@@ -336,7 +336,8 @@ h3
       border-radius: 30px;
     }
     .printpack-expanded-card {
-      flex: 1 1 100%;
+      width: 100%;
+      padding: 12px;
     }
   }
   
